--- a/index.html
+++ b/index.html
@@ -42,23 +42,11 @@
             background: white;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-        .quiz, .memory-game, .word-search {
+        .quiz, .word-search {
             margin: 20px 0;
         }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(3, 100px);
-            gap: 10px;
-        }
-        .card {
-            width: 100px;
-            height: 100px;
-            background-color: #d9edf7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            font-size: 2em;
+        .word-search pre {
+            font-size: 1.5em; /* Aumenta o tamanho do texto */
         }
         footer {
             text-align: center;
@@ -120,7 +108,6 @@
         <h2>Livros Recomendados</h2>
         <ul>
             <li><strong>Pequeno Manual Antirracista</strong> - Djamila Ribeiro</li>
-            <li><strong>O que é Racismo</strong> - Silvio Almeida</li>
             <li><strong>O Negro no Brasil</strong> - Alberto da Costa e Silva</li>
             <li><strong>As Veias Abertas da América Latina</strong> - Eduardo Galeano</li>
             <li><strong>O que é Racismo Institucional</strong> - Marilena Chauí</li>
@@ -163,32 +150,36 @@
                 <input type="radio" name="q2" value="b"> B) Combater o racismo<br>
                 <input type="radio" name="q2" value="c"> C) Apoiar racistas<br><br>
 
+                <label>3. O racismo pode ser:</label><br>
+                <input type="radio" name="q3" value="a"> A) Apenas verbal<br>
+                <input type="radio" name="q3" value="b"> B) Estrutural e institucional<br>
+                <input type="radio" name="q3" value="c"> C) Uma opinião pessoal<br><br>
+
+                <label>4. O que é um privilégio branco?</label><br>
+                <input type="radio" name="q4" value="a"> A) Ser considerado normal<br>
+                <input type="radio" name="q4" value="b"> B) Ter acesso a direitos iguais<br>
+                <input type="radio" name="q4" value="c"> C) Não ser discriminado por sua cor de pele<br><br>
+
+                <label>5. Como podemos combater o racismo?</label><br>
+                <input type="radio" name="q5" value="a"> A) Ignorando o problema<br>
+                <input type="radio" name="q5" value="b"> B) Educando as pessoas sobre diversidade<br>
+                <input type="radio" name="q5" value="c"> C) Fazendo piadas sobre etnias<br><br>
+
                 <button type="button" onclick="checkAnswers()">Enviar</button>
             </form>
             <div id="quiz-results"></div>
         </div>
 
-        <div class="memory-game">
-            <h3>Jogo da Memória Antirracista</h3>
-            <div class="grid">
-                <div class="card" onclick="flipCard(this)">🟩</div>
-                <div class="card" onclick="flipCard(this)">🟩</div>
-                <div class="card" onclick="flipCard(this)">🟦</div>
-                <div class="card" onclick="flipCard(this)">🟦</div>
-                <div class="card" onclick="flipCard(this)">🟥</div>
-                <div class="card" onclick="flipCard(this)">🟥</div>
-            </div>
-        </div>
-
         <div class="word-search">
             <h3>Caça-Palavras Antirracista</h3>
-            <p>Encontre as palavras: DIVERSIDADE, IGUALDADE, RESPEITO</p>
+            <p>Encontre as palavras: DIVERSIDADE, IGUALDADE, RESPEITO, EMPATIA, JUSTIÇA, INCLUSÃO, TOLERÂNCIA, LUTA, DIREITOS, CONSCIÊNCIA</p>
             <pre>
-            D I V E R S I D A D E
-            A B C R E S P E I T O
-            F G H I J K L M N O P
-            Q R S T U V I G U A L
-            W X Y Z A B C D E F G
+            D I V E R S I D A D E T O L E R Â N C I A
+            D A J R E S P E I T O A E D I R E I T O S
+            N I N C L U S Ã O R E S P E I T O J U S T I Ç A
+            E M P A T I A E M D I V E R S I D A D E
+            I G U A L D A D E L U T A R E S P E I T O
+            R E S P E I T O J U S T I C A C O N S C I Ê N C I A
             </pre>
         </div>
     </section>
@@ -203,7 +194,10 @@
         function checkAnswers() {
             const answers = {
                 q1: 'a',
-                q2: 'b'
+                q2: 'b',
+                q3: 'b',
+                q4: 'c',
+                q5: 'b'
             };
             let score = 0;
             
@@ -214,38 +208,7 @@
                 }
             }
             
-            document.getElementById('quiz-results').innerText = `Você acertou ${score} de 2 perguntas.`;
-        }
-
-        let hasFlippedCard = false;
-        let firstCard, secondCard;
-
-        function flipCard(card) {
-            if (!hasFlippedCard) {
-                hasFlippedCard = true;
-                firstCard = card;
-                firstCard.innerText = "🙌";
-            } else {
-                secondCard = card;
-                secondCard.innerText = "🙌";
-                checkForMatch();
-            }
-        }
-
-        function checkForMatch() {
-            if (firstCard.innerText === secondCard.innerText) {
-                resetCards();
-            } else {
-                setTimeout(() => {
-                    firstCard.innerText = "🟩";
-                    secondCard.innerText = "🟩";
-                    resetCards();
-                }, 1000);
-            }
-        }
-
-        function resetCards() {
-            [hasFlippedCard, firstCard, secondCard] = [false, null, null];
+            document.getElementById('quiz-results').innerText = `Você acertou ${score} de 5 perguntas.`;
         }
     </script>
 </body>
