--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1>Educação Antirracista</h1>
         <nav>
             <ul>
-                <li><a href="#videos">Vídeos</a></li>
+                <li><a href="#videos">Fique Ligado</a></li>
                 <li><a href="#termos">Termos Racistas</a></li>
                 <li><a href="#livros">Livros Recomendados</a></li>
                 <li><a href="#musicas">Músicas sobre a Causa</a></li>
@@ -79,7 +79,9 @@
     </header>
 
     <section id="videos">
-        <h2>Vídeos Educativos</h2>
+        <h2>Fique Ligado</h2>
+        <p>O antirracismo é um movimento que busca combater o racismo e promover a igualdade racial. Ele se baseia na ideia de que todos devem ser tratados com dignidade e respeito, independentemente de sua cor de pele ou origem étnica. O antirracismo não se limita a não praticar atos racistas, mas envolve a luta ativa contra todas as formas de discriminação e preconceito racial.</p>
+        
         <div class="video-container">
             <iframe width="300" height="200" src="https://www.youtube.com/embed/MzkIppyYkP0" frameborder="0" allowfullscreen></iframe>
             <iframe width="300" height="200" src="https://www.youtube.com/embed/SwN4ndBFaPg" frameborder="0" allowfullscreen></iframe>
